clang/test/BSC/Negative/Ownership/Borrow/borrow_safe/borrow_safe.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

int a = 1;
const int b = 1;
struct R {
   int r1;
   const int r2;
};
struct R g_r;

_Safe void foo1(int p) {
  extern int num;
  static int num1 = 0; // expected-error {{defining mutable global variables is not allowed within the safe zone}}
  static const int c1 = 0; // legal
  &_Mut a; // expected-error {{global or static variables are not allowed to be mutably borrowed within the safe zone}}
          // expected-warning@-1{{expression result unused}}
  &_Mut num1; // expected-error {{global or static variables are not allowed to be mutably borrowed within the safe zone}}
             // expected-warning@-1{{expression result unused}}
  &_Mut c1; // expected-error {{the expression after '&_Mut' must be modifiable}}
          // expected-warning@-1{{expression result unused}}
  &_Const a; // legal
            // expected-warning@-1{{expression result unused}}
  &_Const num1; // legal
               // expected-warning@-1{{expression result unused}}
  _Unsafe {
   static int num2 = 0; // legal
   &_Mut a; // expected-warning{{expression result unused}}
   &_Mut num2; // expected-warning{{expression result unused}}
   &_Const a; // expected-warning{{expression result unused}}
   &_Const num2; // expected-warning{{expression result unused}}
  }
}

_Unsafe void foo2(int p) {
  _Safe {
    extern int num;
    static int num3 = 0; // expected-error {{defining mutable global variables is not allowed within the safe zone}}
    static const int c2 = 0; // legal
    &_Mut a; // expected-error {{global or static variables are not allowed to be mutably borrowed within the safe zone}}
            // expected-warning@-1{{expression result unused}}
    &_Mut num3; // expected-error {{global or static variables are not allowed to be mutably borrowed within the safe zone}}
               // expected-warning@-1{{expression result unused}}
    &_Const a; // expected-warning{{expression result unused}}
    &_Const num3; // expected-warning{{expression result unused}}
  }
}